--- a/stepshop/stepshop/templates/contact.html
+++ b/stepshop/stepshop/templates/contact.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,14 +13,14 @@
     <title>Pixie Template - Contact</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'stepshop/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/tooplate-main.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/flex-slider.css">
+    <link rel="stylesheet" href="{% static 'stepshop/assets/css/fontawesome.css' %}">
+    <link rel="stylesheet" href="{% static 'stepshop/assets/css/tooplate-main.css' %}">
+    <link rel="stylesheet" href="{% static 'stepshop/assets/css/owl.css' %}">
+    <link rel="stylesheet" href="{% static 'stepshop/assets/css/flex-slider.css' %}">
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -42,7 +43,7 @@ https://www.tooplate.com/view/2114-pixie
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/images/header-logo.png" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="{% static 'stepshop/assets/images/header-logo.png' %}" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -183,7 +184,7 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
+              <img src="{% static 'stepshop/assets/images/header-logo.png' %}" alt="">
             </div>
           </div>
           <div class="col-md-12">
@@ -231,15 +232,15 @@ https://www.tooplate.com/view/2114-pixie
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'stepshop/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'stepshop/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/flex-slider.js"></script>
+    <script src="{% static 'stepshop/assets/js/custom.js' %}"></script>
+    <script src="{% static 'stepshop/assets/js/owl.js' %}"></script>
+    <script src="{% static 'stepshop/assets/js/isotope.js' %}"></script>
+    <script src="{% static 'stepshop/assets/js/flex-slider.js' %}"></script>
 
 
     <script language = "text/Javascript"> 
